<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Conversor de Divisas</string>
    <string name="title_activity_list">Listado de Divisas</string>
    <string name="etq_euro">EUR</string>
    <string name="etq_divisa">USD</string>
    <string name="etq_menu">divisas</string>
    <string name="etq_configurar">Configuración</string>
    <string name="btn_limpiar">limpiar</string>
    <string name="btn_salir">salir</string>
    <string name="error">Datos incorrectos</string>
    <string name="etq_cero">0.0000</string>
    <string name="sin_datos">Sin divisas&#8230;</string>
    <string name="btn_divisas">+divisas</string>
    <string name="logo_divisa">logo divisa</string>
    <string name="info_cambio">%1$s cambio a %2$.4f</string>
    <string name="currency_category">Monedas&#8230;</string>
    <string name="decimal_title">Decimales</string>
    <string name="separator_title">Separador decimal</string>
    <string name="decimal_summary">Elija el número de decimales a utilizar</string>
    <string name="separator_summary">Elija el separador de decimales a utilizar</string>
    <string name="decimal_dialog_title">Número de decimales</string>
    <string name="separator_dialog_title">Separador de decimales</string>
    <string name="conectando_BCE">Conectando con el BCE</string>
    <string name="seleccionar_divisa">Debes seleccionar una divisa</string>
    <string name="bbdd_actualizada">Datos actualizados</string>

    <string-array name="separatorEntries">
        <item>punto</item>
        <item>coma</item>
    </string-array>

    <string-array name="separatorValues">
        <item>.</item>
        <item>,</item>
    </string-array>

</resources>
